--- a/style/style.css
+++ b/style/style.css
@@ -3,52 +3,62 @@
 }
 div {
     width:80%;
-    background-color:rgb(235, 235, 235);;
+    background-color:rgb(241, 233, 233);
     padding:20px;
     margin:auto;
-    margin-top: 30px;
-    border-radius: 5px;
+  justify-content: center;
+    border-radius: 10px;
     font-size: large;
+    
 }
 form {
     outline: none;
-}
-.inputs {
-    width:100%;
-    padding:15px 20px;
-    margin: 8px 0;
-    font-size: large;
-    outline: none;
-    border-radius: 5px;
-}
-
-.inputs:focus {
-border:2px solid blue;
-}
-select {
-    background-color: white;
-
-} .labels{
-   font-weight: bold;
-  
+    margin: auto;
+    
+    
     
 }
-#btn {
-    width:100%;
-    padding:15px 20px;
-    margin: 8px 0;
-    outline: none;
-    border-radius: 5px;
-    background-color: red;
-    color:white;
-    font-size: larger;
-    padding:10px;
-
+.flexBox {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    padding: 5px;
 }
-#btn:hover {
-    background-color: rgb(5, 0, 0);
-    border-radius: 10px;
-    cursor:pointer;
-    outline: none;
-    border: 3px solid red;
+#result {
+    width: 77%;
+    display: block;
+    padding: 12px 20px;
+    margin:auto;
+  background-color: whitesmoke;
+    font-weight: bolder;
+    font-size: large;
+    text-align: left;
+}
+
+input {
+    font-weight: bold;
+    font-size: large;
+    text-align: center;
+    flex:20%;
+    margin: 5px;
+    background-color: rgb(241, 233, 233);
+}
+input:active{
+    background-color:rgb(224, 216, 216);
+}
+input:last-child:active{
+    background-color: greenyellow;
+}
+input:hover {
+    border:2px solid greenyellow;
+    border-radius: 5px;
+    transition: 0.5s;
+   
+    
+}
+#C {
+    background-color: orange;
+}
+#C:active {
+background-color: rgb(247, 194, 97);
 }
